# xdc_lfw_data

./: .gitignore  AUTHORS  Jenkinsfile  LICENSE  README.md  TODO.txt  requirements.txt  setup.cfg  setup.py  web_app.py  xdc_lfw_data.py
Aemet/: ApiAemet.py
modules/: clouds.py  config.py  config.py.example  landsat8.py  metadata_gen.py  meteo.py  modules.py  pruebaEstaciones.csv  sentinel2.py  utils.py  water.py
notebooks/: 101-WaterMonitoring.ipynb
sateliteSergio/: Clorofilasl8.py  cloro_reg.py  oreopoulos.py  solo1dia.py
wq_modules/: DOS1_landsat.py  __init__.py  clouds.py  config.py  config.py.example  landsat.py  landsat8.py  metadata_gen.py  meteo.py  modeling_file.py  modules.py  preprocess_landsat.py  process_sentinel.py  repos.py  sentinel.py  sentinel2.py  tasks.py  utils.py  water.py
wq_server/: __init__.py  xdc_lfw_data.py
wq_server/api/: __init__.py  v1.py
wq_server/cmd/: run.py  tasks.py
wqsat/: __init__.py  coord_reservoirs.json  web_app.py  xdc_lfw_data.py
wqsat/api/: __init__.py  v1.py
wqsat/cmd/: run.py
wqsat/modules/: clouds.py  config.py  landsat8.py  metadata_gen.py  meteo.py  modules.py  sentinel2.py  utils.py  water.py
wqsat/sateliteSergio/: Readme.txt
