[metadata]
name = wqsat
summary = Water Quality & Sattelite service
description-file =
    README.md
author = Fernando Aguilar
author-email = aguilarf@ifca.unican.es
license = Apache-2
home-page = http://github.com/IFCA/xdc_lfw_data
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.6

[files]
packages =
    wq_modules
[entry_points]

console_scripts = 
    wqsat-run = wqsat.cmd.run:main
