[metadata]
name = wqsat
summary = Water Quality & Satellite service
description-file =
    README.md
author = Fernando Aguilar
author-email = aguilarf@ifca.unican.es
license = Apache-2
home-page = http://github.com/IFCA/xdc_lfw_data
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.6

[files]
packages =
    wq_modules
    wq_server
[entry_points]

console_scripts = 
    wqsat-run = wq_server.cmd.run:main
